all scenarios encoded

--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
                         <div class="lieu-de-traitement" data-type="decheterie"></div>
                         <div class="lieu-de-traitement" data-type="bac"></div>
                         <div class="lieu-de-traitement" data-type="compost"></div>
+                        <div class="lieu-de-traitement" data-type="particulier"></div>
                     </div>
                     <div class="finalites">
                         <div class="lieu-de-traitement" data-type="incineration"></div>
